fix alignment and size of page elements
bold area of interest categories

--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -54,9 +54,11 @@
 
   .custom-control-label {
     font-weight: normal;
+    @extend .px-3;
 
     span {
       @extend .pr-1;
+      font-weight: bold;
     }
   }
 }
